pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/top-level-field.ub
factory: {
  locals: {
    one: 1
  }
  locals: {
    two: 2
  }
}
